--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -7,3 +7,4 @@ asset_index:
     fork-folded: fork-folded.png
     fork-choose-open-repository: fork-choose-open-repository.png
     fork-select-repository-location: fork-select-repository-location.png
+    fork-open-basic: fork-open-basic.png
