Add summary to intro-open

--- a/example/course-resources/fork/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/fork/level-data/intro-open-repository-index.yaml
@@ -74,9 +74,19 @@ asset_index:
 
       然後，貼入上圖兩個紅框圈選位置的其中一個後(任選)，按下「選擇資料夾」，就可以開啟資料夾了  
 
-      成功開啟之後，fork 中就會出現如下圖紅框圈選的線圖  
+      成功開啟之後，fork 中應該會出現類似下圖紅框圈選的${{t/graph-f}}
 
       ![illustration]({{images/fork-open-basic}})  
 
-      這個線圖，是整個 git 非常重要的元素，在接下來的教學中我們將好好的熟悉它
+      請計算出現在你的 fork 中的${{t/graph}}上，圓圈的數量，並回答在下方的欄位中  
+    
+    summary: |+2
+      .md
 
+      至此為止，你已經學會  
+      1. 如何開啟 fork
+      2. 使用 fork 開啟 git 專案
+      3. 了解 git 專案中，${{t/graph}}是最核心的元素
+
+      在接下來的教學中都將圍繞著${{t/graph}}進行，逐步的熟悉 git 的概念以及操作方法
+      
