Introduce how to use graph (WIP)

--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -8,3 +8,4 @@ asset_index:
     fork-choose-open-repository: fork-choose-open-repository.png
     fork-select-repository-location: fork-select-repository-location.png
     fork-open-basic: fork-open-basic.png
+    folder-history-change: folder-history-change.png
