--- a/example/course-resources/fork/level-data/browse-history-index.yaml
+++ b/example/course-resources/fork/level-data/browse-history-index.yaml
@@ -2,9 +2,29 @@ asset_index:
   infile:
     introduction: |+2
       .md
-
-      在這個章節中，你將在${{t/graph}}上游走  
-
-      git 負責管理電腦上一個資料夾的內容變化歷史  
       
-      ${{t/graph}}
+      在這個章節中，我們將在${{t/graph}}上游走  
+
+      上個章節的最後，我們提到了${{t/graph}}可以說是 git 最重要的元素也不為過  
+      我們想要使用 git 管理電腦上一個資料夾的內容變化歷史，${{t/graph}}則以圖像的方式呈現資料夾的內容變化歷史  
+      
+      說到這裡「資料夾的內容變化歷史」是甚麼意思呢？ 請參考下圖(一)  
+
+      ![illustration]({{images/folder-history-change}})  
+      <div class="img-title">圖(一)</p>  
+
+      圖(一)中左右並排了兩個資料夾，一白一黃  
+      請想像他們分別代表我們電腦上一個特定的資料夾在不同時間點的狀態  
+      白色的資料夾代表在八點時候的狀態，它裡面只有一份檔案  
+      而黃色的資料夾則代表九點時我們在這個資料夾加入了一份檔案後的狀態  
+      像這樣子，記錄下每一次資料夾的內容變化
+      就是這個**「資料夾的內容變化歷史」**  
+      
+      擁有這個歷史有甚麼好處呢？最顯而易見的有兩點  
+      1. 猶如時光機，我們可以任意的把資料夾退回到過去特定的時間點  
+      2. 猶如一部史書，我們可以知道這個資料夾的內容過去是如何演變的  
+
+      而${{t/graph}}就是實現 2. 的一個好工具  
+
+    
+      
