--- a/example/course-resources/fork/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/fork/level-data/intro-open-repository-index.yaml
@@ -86,7 +86,7 @@ asset_index:
       至此為止，你已經學會  
       1. 如何開啟 fork
       2. 使用 fork 開啟 git 專案
-      3. 了解 git 專案中，${{t/graph}}是最核心的元素
 
-      在接下來的教學中都將圍繞著${{t/graph}}進行，逐步的熟悉 git 的概念以及操作方法
+      在本章節的最後，我們引出了 git 最重要的一個概念：${{t/graph}}  
+      在接下來的章節中，我們都將圍繞著它進行，逐步的熟悉 git 的概念以及操作方法  
       
