--- a/example/course-resources/fork/levels/browse-history.yaml
+++ b/example/course-resources/fork/levels/browse-history.yaml
@@ -6,3 +6,5 @@
   steps:
     - !illustrate  
       descriptionId: "level-data/browse-history-index/introduction"
+      needConfirm: true
+    - !
