--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -10,5 +10,8 @@ asset_index:
     fork-open-basic: fork-open-basic.png
     folder-history-change: folder-history-change.png
     graph-fork: graph-fork.png
-    select-first-commit: select-first-commit.png
+    select-last-commit: select-last-commit.png
+    select-file-tree-tab: select-file-tree-tab.png
     show-file-tree: show-file-tree.png
+    show-file-tree-of-second-commit: show-file-tree-of-second-commit.png
+    read-readme-of-second-commit: read-readme-of-second-commit.png
