--- a/example/course-resources/fork/levels/browse-history.yaml
+++ b/example/course-resources/fork/levels/browse-history.yaml
@@ -5,31 +5,42 @@
       referenceStoreName: basic-operation
   steps:
     - !illustrate  
-      descriptionId: "level-data/browse-history-index/introduction"
+      descriptionId: "level-data/browse-history/introduction"
       needConfirm: true
     - !elaborate 
-      descriptionId: "level-data/browse-history-index/graph-as-folder-history"
+      descriptionId: "level-data/browse-history/graph-as-folder-history"
       needConfirm: true
     - !illustrate 
-      descriptionId: "level-data/browse-history-index/file-tree-viewer"
+      descriptionId: "level-data/browse-history/file-tree-viewer"
       needConfirm: true
 
-    - !act.loadReference 
+    - !loadReference 
       repoSetupName: basic
       referenceName: init
 
     # intruct how to use file viewer
     - !instruct 
-      descriptionId: "level-data/browse-history-index/open-folder"
+      descriptionId: "level-data/browse-history/open-folder"
       needConfirm: true
     - !instruct 
-      descriptionId: "level-data/browse-history-index/use-file-tree-viewer"
+      descriptionId: "level-data/browse-history/use-file-tree-viewer"
     - !instruct 
-      descriptionId: "level-data/browse-history-index/read-file-tree-viewer"
+      descriptionId: "level-data/browse-history/read-file-tree-viewer"
     - !verifyInput 
-      answer: 2
+      answer: "2"
 
     # introduce file tree
     - !illustrate 
-      descriptionId: "level-data/browse-history-index/explain-file-tree"
+      descriptionId: "level-data/browse-history/explain-file-tree"
+      needConfirm: true
+    - !instruct 
+      descriptionId: "level-data/browse-history/read-file-tree-of-second-commit"
+      needConfirm: true
+    - !instruct 
+      descriptionId: "level-data/browse-history/read-readme-of-second-commit"
+    - !verifyInput 
+      answer: "${{level-data/browse-history/answer-second-readme}}"
+      
+
+    
     
