--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -15,3 +15,4 @@ asset_index:
     show-file-tree: show-file-tree.png
     show-file-tree-of-second-commit: show-file-tree-of-second-commit.png
     read-readme-of-second-commit: read-readme-of-second-commit.png
+    open-working-directory: fork-open-working-directory.png
