--- a/example/course-resources/fork/t-index.yaml
+++ b/example/course-resources/fork/t-index.yaml
@@ -6,3 +6,7 @@ asset_index:
     file-tree-f: 檔案樹(file tree)
     file-tree: 檔案樹
     file-tree-gui: 「File Tree」
+    work-tree-alt-f: 工作目錄(working directory)
+    work-tree-f: 工作樹(working tree)
+    work-tree-alt: 工作目錄
+    work-tree: 工作樹
