--- a/example/course-resources/fork/levels/browse-history.yaml
+++ b/example/course-resources/fork/levels/browse-history.yaml
@@ -18,7 +18,7 @@
       repoSetupName: basic
       referenceName: init
 
-    # intruct how to use file viewer
+# intruct how to use file viewer
     - !instruct 
       descriptionId: "level-data/browse-history/open-folder"
       needConfirm: true
@@ -29,7 +29,7 @@
     - !verifyInput 
       answer: "2"
 
-    # introduce file tree and practice
+# introduce file tree and practice
     - !illustrate 
       descriptionId: "level-data/browse-history/explain-file-tree"
       needConfirm: true
@@ -51,7 +51,7 @@
     - !verifyInput 
       answer: "${{level-data/intro-open-repository/file-read-me:v2}}"
       
-    # read file tree will not change working directory
+# read file tree will not change working directory
     - !elaborate 
       descriptionId: "level-data/browse-history/read-file-tree-not-affect-working-directory"
     - !instruct 
@@ -63,6 +63,10 @@
       needConfirm: true     
     - !illustrate 
       descriptionId: "level-data/browse-history/illustrate-file-tree"
+      needConfirm: true
+
+    - !elaborate 
+      descriptionId: "level-data/browse-history/summary"
       needConfirm: true
       
 
