Update tutorial content

--- a/example/course-resources/fork/level-data/browse-history-index.yaml
+++ b/example/course-resources/fork/level-data/browse-history-index.yaml
@@ -16,6 +16,7 @@ asset_index:
 
       圖(一)中左右並排了兩個資料夾，一白一黃  
       請想像他們分別代表我們電腦上一個特定的資料夾在不同時間點的狀態  
+
       白色的資料夾代表在八點時候的狀態，它裡面只有一份檔案  
       而黃色的資料夾則代表九點時我們在這個資料夾加入了一份檔案後的狀態  
       像這樣子，記錄下每一次資料夾的內容變化
@@ -122,7 +123,7 @@ asset_index:
       使用${{t/file-tree-gui}}檢視指定版本的${{t/file-tree}}的情況下  
       我們可以進一步檢視個別檔案的內容  
 
-      請如下圖(八)所示，使用滑鼠左鍵單點「===read me===.txt」  
+      請如下圖(八)所示，使用滑鼠左鍵單點「===read me===.txt」，將它以深藍底白字的方式選取  
       
       ![illustration]({{images/read-readme-of-second-commit}})  
       <div class="img-title">圖(八)</div>  
@@ -191,6 +192,7 @@ asset_index:
 
       「目前資料夾實際上的內容」說起來非常繞口  
       在使用 git 時，我們常常必須區分想要講述的是「*當前*的資料夾狀態」還是「*以前*的資料夾狀態」  
+      
       在前不久，我們叫紹了被 git 保存的任意*以前*資料夾版本內容叫做${{t/file-tree}}  
       相對於此，*當前*的資料夾內容則叫做**${{t/work-tree-f}}**  
       或者比較通俗的說法是${{t/work-tree-alt-f}}  
