--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -5,8 +5,10 @@ asset_index:
     main.intro-install.name: "第一關：安裝"
     main.intro-open-repository.name: "第二關：使用 fork 開啟資料夾"
     main.browse-history.name: "第三關：瀏覽版本歷史"
+    main.checkout-revision.name: "第四關：切換工作樹版本"
     
   ondisk:
     intro-install: "intro-install.yaml"
     intro-open-repository: "intro-open-repository.yaml"
     browse-history: "browse-history.yaml"
+    checkout-revision: "checkout-revision.yaml"
