--- a/example/course-resources/fork/level-data/browse-history-index.yaml
+++ b/example/course-resources/fork/level-data/browse-history-index.yaml
@@ -214,7 +214,7 @@ asset_index:
 
       上圖的左邊是${{t/work-tree}}，下面有一個白色資料夾，代表平常我們工作的資料夾  
       新增/修改/刪除等變化都發生在這裡  
-      因為通常我們只能在一個地方工作(其實有例外)，所以左邊只有一個白色資料夾  
+      因為通常我們只能在一個地方工作，所以左邊只有一個白色資料夾  
       
       然後，git 另外找了一個地方，把我們想要留下作紀念(?)的${{t/file-tree}}都偷偷存了起來  
       就像上圖的右邊存了三個不同版本的${{t/file-tree}}  
