--- a/example/course-resources/fork/level-data/checkout-revision-index.yaml
+++ b/example/course-resources/fork/level-data/checkout-revision-index.yaml
@@ -4,7 +4,7 @@ asset_index:
     introduction: |+2
       .md
       在前一回我們學習了如何使用${{t/gui}}來瀏覽任意過往留下的資料夾版本－－${{t/file-tree}}  
-      但是，看得到摸不著的感覺令人心癢難耐  
+      但是，看得到摸不著的感覺令人心癢難耐，不是嗎？  
       現在，就讓我們來學習如何把過往的${{t/file-tree}}給取出來放到目前的資料夾中  
 
     open-gui: |+2
@@ -34,6 +34,114 @@ asset_index:
 
       請以數字(1或2)回答
 
+    introduce-checkpoint: |+2
+      .md      
+      接下來，我們的練習用資料夾將會在幾個不同的夾版本之間轉換  
+      因為與檔案有關的操作比較複雜，難免不會發生錯誤  
+      為了以防萬一，與檔案有關的操作我們提供了上面這樣的「存檔點」  
+
+      經過存檔點的時候，資料夾當下的狀態將會保存，這個教學的進度也是  
+      當陷入絕望的情況不知所措時，您隨時可以讀取過往已經儲存的存檔點，回到當時的狀態
+
     instruct-checkout-first: |+2
       .md
-      首先，就讓我們來回溯一下
+      現在，已經確認了我們目前的資料夾是與「第 6 號提交」一致了  
+      讓我們來嘗試把它切換到不同的版本  
+
+      請按照下圖(二)與圖(三)的操作，切換資料夾到第 1 號提交：  
+
+      ![illustration]({{images/checkout-first-context-menu}})  
+      <div class="img-title">圖(二)</div>  
+
+      首先，如上圖所示，請將滑鼠指向${{t/graph}}的「第 1 號提交」上  
+      按下右鍵後，就會出現如圖所示的選單  
+
+      找到選單上如圖中紅框圈選的選項：「${{st/checkout-commit}}」  
+      按下滑鼠左鍵後，會出現如下圖(三)的對話框
+
+      ![illustration]({{images/checkout-first-confirm}})  
+      <div class="img-title">圖(三)</div>  
+
+      這個對話框大致上是提示說接下來將會把你的資料夾切換成「第 1 號提交」的版本，請問是否確認  
+      請按下如上圖中紅框所圈選的確認按鈕，表示確認進行  
+
+      完成操作後，目前的資料夾應該就會成功切換到「第 1 號提交」所儲存的版本  
+      請按下下面的「執行」按鈕，進行檢查
+
+    intro-check-folder-content: |+2
+      .md
+      現在，我們成功的把練習用資料夾倒回先前保存過的「第 1 號提交」的狀態  
+      也就是說，資料夾中的所有檔案都變成當時的樣貌了！  
+
+      聽起來有點不可思議，那麼，我們應該如何實際驗證這件事情呢？  
+      當然就是實際把資料夾打開來看看有甚麼變化嘍  
+      
+      請按照接下來的操作驗證資料夾的內容變化
+
+    instruct-play-first-sound: |+2
+      .md
+      請使用檔案管理員開啟位於`#{{basic}}`的資料夾  
+
+      我們會發現，資料夾中出現了一個名為 **sound** 的音檔  
+      這個檔案在這個章節剛開始的時候還不存在，因為它在這個資料夾歷史變遷的過程中被刪除了  
+
+      請播放看看 sound，並選擇你所聽到的聲音為下列何者：  
+
+      1. 蟲鳴
+      2. 鳥叫
+      3. 天雷
+      4. 地火
+
+      請以數字(1234)回答
+
+    suggest-checkout-third: |+2
+      .md
+      恭喜回答正確！  
+      偷偷地告訴你，sound 的內容在「第 3 號提交」時被改變了  
+      就讓我們再一次把資料夾的內容切換過去，然後聽聽看吧  
+
+    instruct-checkout-third: |+2
+      .md
+      請按照先前指引的方法，切換資料夾版本到「第 3 號提交」  
+      完成後，請按下下面的「執行」按鈕，進行檢查
+
+    instruct-play-third-sound: |+2
+      .md
+      請再一次開啟位於`#{{basic}}`的資料夾，並且播放 sound 這個音檔  
+
+      請選擇你所聽到的聲音為下列何者：  
+
+      1. 蟲鳴
+      2. 鳥叫
+      3. 天雷
+      4. 地火
+
+      請以數字(1234)回答
+
+    suggest-checkout-sixth: |+2
+      .md
+      在聽過兩個版本的 sound 之後，相信你已經體驗到切換資料夾版本的用處了  
+      那麼，最後就讓我們再切換回這個章節的起點，「第 6 號提交」吧  
+      完成後，請按下下面的「執行」按鈕，進行檢查
+
+    conclude-section: |+2
+      .md 
+      恭喜你完成這個章節的指引  
+      相信你已經非常嫻熟於如何切換資料夾${{t/work-tree}}的不同版本了  
+
+      到這裡你或許會開始好奇，在上一個章節中，我們學習了如何瀏覽過往的${{t/file-tree}}  
+      並且學習了可以從${{t/gui}}的${{t/file-tree}}介面中窺探特定檔案在過往版本的內容  
+      既然如此，我們有需要把資料夾切換回特定的版本嗎？  
+
+      實際上是有的。主要有兩種目的  
+      1. 為了可以閱覽任意類型的檔案。相比之下${{t/file-tree}}能夠閱覽的檔案種類有侷限
+         或許你已經注意到了，像sound這樣的音檔還有大多數非文字組成的檔案，都是不能在${{t/file-tree}}的介面閱覽的  
+      2. 想要從一個檔案的過往特定版本開始修改。${{t/file-tree}}只能閱覽，不能修改  
+      
+      這個章節中，我們透過播放 sound 檔案體現了第 1. 點的用途  
+      而第 2. 點提到的「修改」在目前為止卻完全沒有提及  
+      因為我們只學習了如何取用既存的資料夾版本  
+      
+      但是沒有問題！在下一個大章中，我們將學習如何創造新的資料夾版本，開創屬於我們的歷史  
+      敬請期待！
+
