--- a/example/course-resources/fork/levels/intro-open-repository.yaml
+++ b/example/course-resources/fork/levels/intro-open-repository.yaml
@@ -28,10 +28,12 @@
             - "$level-data/intro-open-repository/file-1:v1"
             - "$level-data/intro-open-repository/file-2:v1"
             - "$level-data/intro-open-repository/file-3:v1"
+            - "level-data/intro-open-repository/sound-bird"
           destinationPaths:
             - "basic/1.txt"
             - "basic/2.txt"
             - "basic/3.txt"
+            - "basic/sound.mp3"
         - !dev.act.git &stageAll
           repoSetupName: basic
           arguments: [ "add", "-A" ]
@@ -54,8 +56,10 @@
         - !act.writeFile 
           sourceAssetIds:
             - "$level-data/intro-open-repository/file-1:v2"
+            - "level-data/intro-open-repository/sound-cicada"
           destinationPaths:
             - "basic/1.txt"
+            - "basic/sound.mp3"
         - *stageAll
         - !dev.act.git 
           repoSetupName: basic
@@ -87,6 +91,7 @@
         - !act.removeFile 
           targetPaths:
             - "basic/2.txt"
+            - "basic/sound.mp3"
         - *stageAll 
         - !dev.act.git 
           repoSetupName: basic
